<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Entry"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter name"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Image"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="Image Preview"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_add_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Entry"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />
</LinearLayout>
